tests/golden/err-inline-tab/expected_error.txt
error: タブは使えません
 --> ./_.clum:3:17
  |
3 |     h .div class	'container'
  |                 ^
